# bioteam-ai

./: .dockerignore  .env.example  .gitignore  BioTeam-AI_Proposal.docx  LICENSE  Makefile  README.md  demo_digest.html  docker-compose.dev.yml  docker-compose.yml  error_hallucination_check_2026-02-27.md  index.html  pyproject.toml
.claude/skills/contradiction-analysis/: SKILL.md
.claude/skills/literature-review/: SKILL.md
.claude/skills/novelty-check/: SKILL.md
.claude/skills/paper-review/: SKILL.md
.github/workflows/: ci.yml  pages.yml
backend/: Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 037b71f6d488_initial_baseline_16_tables.py  a1b2c3d4e5f6_add_session_checkpoint_table.py  (+2 more)
backend/app/: __init__.py  celery_app.py  config.py  main.py
backend/scripts/: collect_elife_corpus.py  collect_peer_reviews.py  refresh_corpus_body.py  run_backup.py  run_digest_validation.py  run_rcmxt_calibration.py  run_w1_casestudy.py  run_w8_benchmark.py  run_w8_pilot.py  seed_digest_topics.py
backend/tests/: conftest.py
docs/: application_reference.html  application_reference.md  error_hallucination_review_2026-02-27.md  project_summary.html  system_review_2026-02-28.md  system_review_2026-02-28_v2.md
docs/annotation/: README.md  claim_corpus_template.csv  rcmxt_guidelines.md
docs/demo/: bioteam_demo.html
docs/planning/: PRD.md  bioinformatics_benchmark_research.md  data_integrity_tools_landscape.md  open_peer_review_strategy.md  peer_review_benchmark_project.md  plan_v3.md  plan_v4.md  prompts_used.md  resources_guide.md  review_v3_critical.md  session_log.md
docs/publication/: rcmxt_annotation_guidelines.md
frontend/: Dockerfile  package-lock.json  package.json  playwright.config.ts
(+411 files in other folders)
